# ripgrepjs

./: .eslintrc.json  .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
benches/: event-emitter.js  raw-bindings.js  rg-binary.js
src/: index.ts  lib.rs
